# cortex-harness

./: .gitignore  README.md  harness.config.yaml  llms.txt  pyproject.toml  robot.info  robot.install
harness/: __init__.py  cli.py  compiler.py  config.py  loader.py  tools_catalog.yaml
verticals/_base/: rules.md  vertical.yaml
verticals/_base/brain/: 00-identity.md  10-memory-protocol.md
verticals/art-studio/: rules.md  vertical.yaml
verticals/art-studio/brain/: 00-identity.md  20-playbook.md
verticals/day-trading/: rules.md  vertical.yaml
verticals/day-trading/brain/: 00-identity.md  20-playbook.md
verticals/ecommerce/: rules.md  vertical.yaml
verticals/ecommerce/brain/: 00-identity.md  20-playbook.md
verticals/small-business/: rules.md  vertical.yaml
verticals/small-business/brain/: 00-identity.md  20-playbook.md
verticals/writing/: rules.md  vertical.yaml
verticals/writing/brain/: 00-identity.md  20-playbook.md
